--- a/bin/Config_RunStop.ini
+++ b/bin/Config_RunStop.ini
@@ -1,10 +1,22 @@
 [RUN]
 
-; Exe names. Should never be changed.
+; Executable names.
+
+; Version <= 3 alpha 2 : NodeJS=WSRNode.cmd
+; Version >= 3 beta 1  : NodeJS=Server_NodeJS.cmd
 NodeJS=WSRNode.cmd
+
+; Version <= 3 alpha 2 : Micro=WSRMicro.cmd
+; Version >= 3 beta 1  : Micro=Client_Microphone.cmd
 Micro=WSRMicro.cmd
+
+; Version <= 3 alpha 2 : Kinect=WSRKinect.cmd
+; Version >= 3 beta 1  : Client_Kinect_Audio.cmd OR Client_Kinect.cmd
 Kinect=WSRKinect.cmd
+
+; All versions : Log2Console=Log2Console.exe
 Log2Console=Log2Console.exe
+
 
 ; Use Kinect (true) or common micro (false)
 UseKinect=true
@@ -29,12 +41,24 @@ WaitBeforeSpeech=10000
 
 [STOP]
 
-; String to recognize the process command line. Should never be changed.
+; String to recognize the process command line.
+
+; Version <= 3 alpha 2 : CmdLineNode=WSRNode.cmd
+; Version >= 3 beta 1  : CmdLineNode=Server_NodeJS.cmd
 CmdLineNode=WSRNode.cmd
-CmdLineMicro=WSRMacro.exe
-CmdLineKinect=WSRMacro_Kinect.exe
+
+;  All versions : CmdLineConhost=conhost.exe
 CmdLineConhost=conhost.exe
+
+;  All versions : CmdLineMicro=WSRMacro.exe
+CmdLineMicro=WSRMacro.exe
+
+;  All versions : CmdLineKinect=WSRMacro_Kinect.exe
+CmdLineKinect=WSRMacro_Kinect.exe
+
+;  All versions : CmdLineLog2Console=Log2Console.exe
 CmdLineLog2Console=Log2Console.exe
+
 
 ; AutoIt executable name. Should not be changed
 AutoIExect=Exit_TrayIcon.exe
@@ -48,4 +72,4 @@ StopLog2Console=true
 StopGracefully=true
 
 ; If stopping gracefully, time out (seconds) before definitely killig the process
-TimeBeforeKill=20
+TimeBeforeKill=60
