--- a/bin/Config_RunStop.ini
+++ b/bin/Config_RunStop.ini
@@ -1,28 +1,16 @@
 [RUN]
 
-; Executable names.
-
-; Version <= 3 alpha 2 : NodeJS=WSRNode.cmd
-; Version >= 3 beta 1  : NodeJS=Server_NodeJS.cmd
-NodeJS=WSRNode.cmd
-
-; Version <= 3 alpha 2 : Micro=WSRMicro.cmd
-; Version >= 3 beta 1  : Micro=Client_Microphone.cmd
-Micro=WSRMicro.cmd
-
-; Version <= 3 alpha 2 : Kinect=WSRKinect.cmd
-; Version >= 3 beta 1  : Client_Kinect_Audio.cmd OR Client_Kinect.cmd
-Kinect=WSRKinect.cmd
-
-; All versions : Log2Console=Log2Console.exe
-Log2Console=Log2Console.exe
-
-
-; Use Kinect (true) or common micro (false)
+; Use Kinect (true) or common Microphone (false)
 UseKinect=true
 
-; Minimize the executables ?
-MinExe=true
+; If using Kinect : use Audio only (true) or with gesture too (false)
+UseKinectAudio=false
+
+; Minimize the executables (all except Log2Console) (yes=true / no=false) ?
+MinimExe=true
+
+; Hide the executables from the TaskBar (all except Log2Console) (yes=true / no=false) ?
+HideExe=false
 
 ; Run the Log2Console application too (yes=true / no=false) ?
 ; (if Log2Console is already running, there won't be another instance)
@@ -30,46 +18,56 @@ RunLog2Console=true
 
 ; Minimize the Log2Console application (yes=true / no=false) ?
 ; (if Log2Console is already running, this param isn't used and the current window state will remain unchanged)
-MinLog2Console=true
+MinimLog2Console=true
 
-; Sentence to pronounce just after launching
-Speech=Bonjour, je suis opérationnel, j'attends vos ordres.
 
-; Time to wait before speaking (ms)
-WaitBeforeSpeech=10000
+[RUN_ACTIONS]
+
+; Time to wait before running the first action (ms)
+; If there isn't any action to run, this value isn't taken account
+TimeBeforeFirstAction=7000
+
+; Time to wait between each action (ms)
+; If there isn't any action to run, this value isn't taken account
+TimeBetweenEachAction=1000
+
+; Run 1 to X actions : executable, web page, plugin or sentence to say. Plugins have to be installed first !
+; -> Key format is :
+;    RunActions_XX=
+;    where "XX" is "01", "02" ... "XX"
+; -> Value format can be begin by "EXE:", "SAY":, and "PLG:" :
+;    EXE:executable
+;    EXE:http://site.com
+;    SAY:sentence to pronounce
+;    PLG:pluginname
+;    PLG:pluginname?action=value
+; -> Keep the value empty (RunAction_XX=) if you don't want to run  a plugin or speak anything for this action.
+; Examples :
+; Action 1 : Launch the Homepage of SARAH
+;              RunAction_01=EXE:http://127.0.0.1:8080/home
+; Action 2 : SARAH says a simple sentence
+;              RunAction_02=SAY:Bonjour !
+; Action 3 : With the plugin named "dateconviviale". SARAH gives the current date 
+;              RunAction_03=PLG:dateconviviale
+; Action 4 : With the plugin named "meteo2". SARAH gets the weather then says it
+;              RunAction_04=PLG:meteo2?day=0
+; Action 5 : SARAH says a simple sentence
+;              RunAction_05=SAY:Je suis maintenant à votre disposition, j'attends vos ordres.
+RunAction_01=SAY:Bonjour !
+RunAction_02=
 
 
 [STOP]
 
-; String to recognize the process command line.
-
-; Version <= 3 alpha 2 : CmdLineNode=WSRNode.cmd
-; Version >= 3 beta 1  : CmdLineNode=Server_NodeJS.cmd
-CmdLineNode=WSRNode.cmd
-
-;  All versions : CmdLineConhost=conhost.exe
-CmdLineConhost=conhost.exe
-
-;  All versions : CmdLineMicro=WSRMacro.exe
-CmdLineMicro=WSRMacro.exe
-
-;  All versions : CmdLineKinect=WSRMacro_Kinect.exe
-CmdLineKinect=WSRMacro_Kinect.exe
-
-;  All versions : CmdLineLog2Console=Log2Console.exe
-CmdLineLog2Console=Log2Console.exe
-
-
-; AutoIt executable name. Should not be changed
-AutoIExect=Exit_TrayIcon.exe
-
 ; Stop the Log2Console application too (yes=true / no=false) ?
 StopLog2Console=true
 
-; true => Try to gracefully close Speech (Kinect or Micro) and Log2Copnsole by using AutoIt. It can take a few seconds.
-; false => Force the process to be killed, like using Task Manager. 
+; true -> Try to gracefully close Speech (Kinect or Micro) and Log2Copnsole by using AutoIt. It can take a few seconds.
+; false -> Force the process to be killed, like using Task Manager. 
 ; Nota : NodeJS is always killed
 StopGracefully=true
 
 ; If stopping gracefully, time out (seconds) before definitely killig the process
-TimeBeforeKill=60
+TimeBeforeKill=20
+
+
